tests/syntax-error/src/syntax_error.app.src
{application, syntax_error,
  [{description, "exercism.org - syntax_error"},
    {vsn, "0.0.1"},
    {modules, []},
    {registered, []},
    {applications, [kernel,
      stdlib]},
    {env, []}
  ]}.
